[gd_scene load_steps=25 format=2]

[ext_resource path="res://Bingus Assets/graphics/floppadarkship.png" type="Texture" id=1]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/13.png" type="Texture" id=2]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/5.png" type="Texture" id=3]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/15.png" type="Texture" id=4]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/10.png" type="Texture" id=5]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/14.png" type="Texture" id=6]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/7.png" type="Texture" id=7]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/6.png" type="Texture" id=8]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/3.png" type="Texture" id=9]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/4.png" type="Texture" id=10]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/2.png" type="Texture" id=11]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/1.png" type="Texture" id=12]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/9.png" type="Texture" id=13]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/8.png" type="Texture" id=14]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/12.png" type="Texture" id=15]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/0.png" type="Texture" id=16]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/11.png" type="Texture" id=17]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/16.png" type="Texture" id=18]
[ext_resource path="res://Enemies/FloppaDarkShip.gd" type="Script" id=19]
[ext_resource path="res://Bingus Assets/sounds/explosion2.wav" type="AudioStream" id=20]
[ext_resource path="res://Enemies/DarkCircleBullet.tscn" type="PackedScene" id=21]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 5 ), ExtResource( 17 ), ExtResource( 15 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 18 ) ],
"loop": false,
"name": "explosion",
"speed": 25.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "floppadarkship",
"speed": 0.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "fade"
length = 0.64
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.64 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.227451 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "flash"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 100, 100, 100, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="FloppaDarkShip" type="Area2D"]
collision_layer = 8
collision_mask = 7
script = ExtResource( 19 )
__meta__ = {
"_edit_group_": true
}
darkcirclebullet = ExtResource( 21 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "floppadarkship"
speed_scale = 0.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite"]
anims/fade = SubResource( 2 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="AnimatedSprite"]
anims/flash = SubResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( 26, -48, 53, -63, 61, -62, 68, -35, 30, 7, 30, 60, 14, 60, 12, 56, 11, 34, 3, 76, -8, 76, -15, 39, -16, 59, -35, 59, -36, 7, -73, -35, -65, -66, -32, -47, -30, -61, -25, -61, -24, -68, -21, -72, -16, -71, -15, -63, 10, -63, 10, -67, 13, -71, 17, -72, 19, -69, 19, -63, 26, -58 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )
volume_db = -6.23

[node name="KillTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="GunPoint" type="Position2D" parent="."]
position = Vector2( -2, 80 )

[connection signal="area_entered" from="." to="." method="_on_FloppaDarkShip_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_FloppaDarkShip_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="animation_finished" from="AnimatedSprite/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="KillTimer" to="." method="_on_KillTimer_timeout"]
